Change Log

vD3.11.0 SCL 20160112
- added RAPI_I2C. Serial RAPI now enabled by RAPI_SERIAL.
  *WARNING* RAPI_I2C not tested yet and probably doesn't work
  both RAPI_I2C and RAPI_SERIAL may be enabled simultaneously
- call RapiSendEvseState() if POST error
- fix bug, wasn't calling RapiSendEvseState() if HardFault()
	
SCL 20160111
- change VOLT_PIN to PILOT_PIN
	
SCL 20151211
- change static inline to inline for wiresend/wirerecv() to fix compiler error
	in Arduino 1.6.6
	
SCL 20151125
- added i2caddr.h
- take Wire.begin() out of RTClib.cpp

vD3.10.4 SCL 20151110
- update version number
	
SCL 20151022
- added SERDBG - decouple serial diags from SERIALCLI
	
SCL 20151019
- slight tweak to RTClib.cpp compiler warning fix in 3.10.2
	
vD3.10.3 CWK 20151018
- Correcting accumulating kWh and resetting Wh going in and out of sleep state

vD3.10.2 SCL 20151017
- lots of changes to get rid of 1.6.5 compiler warnings(More)
- wmcbrine PR 48: more code shrinking from - manually merged
	
vD3.10.1 SCL 20151017
- merge PR 47 from wmcbrine
 - faster ulong_sqrt()
 - code saving tweaks to u2a() & SaveSettings()
	
vD3.10.0 SCL 20151017
- fix compile error caused by include for LiquidCrystal_I2C.h
	
vD3.10.0 SCL 20151012
- fix bug introduced by diode check state oscillation fix in D3.9.9 - if 
  transition to sleep while charging, on sleep exit would go into VENT REQ error
  -> if pilot voltage in State C range, but PWM off, go to State B
     this is an added safety feature, because State C should never be allowed
     when PWM is off
- fix bug: if enter sleep mode due to time/charge limit met, sleep should
  automatically be cancelled when car disconnected but it was staying in sleep
	
vD3.9.10 CWK 20150920
- GFI Self Test Duty Cylce restored to 50%

vD3.9.9 CWK/SCL 20150914
- fix diode check state oscillation bug (cwk/scl)
- hard fault on vent required (scl)
- setup() - increase I2C device delay from 200 -> 400ms (cwk) for Danny ter Haars board